src/test/resources/plang-strict/parse-error/020_program_defined_twice.plang
**#Two programs in one file
**FirstErrorLoc:6,1
program t
  ki: "hello"
program_vége
program t2
  ki: "world"
program_vége
